labour/test/invalid/invalid_no_volumes.labour
bouldering_wall "NoVolumesWall": {
  routes [
    bouldering_route "floating route": {
      grade: "5B",
      grid_base_point: { x: 0, y: 0 },
      holds ["0001", "0002"]
    }
  ],
  volumes []
}
